src/app/wizard/wizard.component.less
@import (reference) "../../assets/stylesheets/patternfly-ng";

.pfng-wizard-cancel-inline {
  margin-left: 25px;
}
.pfng-wizard-footer-inline {
  text-align: left;
}
.pfng-wizard-main {
  margin-left: 0;
}
.pfng-wizard-position-override {
  position: relative;
}
.wizard-pf-footer {
  .wizard-btn {
    margin-right: 0;
    &.wizard-btn-no-back {
      display: none;
    }
  }
}
.wizard-pf-steps-indicator li a.disabled {
  cursor: default;
  &:hover {
    .wizard-pf-step-number {
      background-color: @color-pf-white;
      border-color: @color-pf-black-400;
      color: @color-pf-black-400;
    }
  }
}

